--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.3",
     "express-handlebars": "^3.0.0",
     "mysql2": "^1.6.1",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "sequelize": "^5.0.0-beta.11"
   }
 }
