--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ejs": "^2.6.1",
     "express": "^4.17.3",
     "express-handlebars": "^3.0.0",
+    "mongodb": "^3.7.3",
     "mysql2": "^1.6.1",
     "pug": "^2.0.3",
     "sequelize": "^5.0.0-beta.11"
