--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.2",
+    "connect-mongodb-session": "^2.0.3",
     "ejs": "^2.6.1",
     "express": "^4.17.3",
     "express-handlebars": "^3.0.0",
