--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^1.18.3"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
     "connect-mongodb-session": "^2.0.3",
     "ejs": "^2.6.1",
