--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.17.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
+    "express-validator": "^5.3.0",
     "mongodb": "^3.7.3",
     "mongoose": "^5.13.14",
     "mysql2": "^1.6.1",
